--- a/static/styles.css
+++ b/static/styles.css
@@ -86,6 +86,19 @@ a:hover {
 
 
 /* ============================================================================
+   PAGE TITLE
+   ============================================================================ */
+
+.page-title {
+    text-align: center;
+    margin: 30px 0 20px 0;
+    color: #2c3e50;
+    font-size: 2em;
+    font-weight: 600;
+}
+
+
+/* ============================================================================
    FLASH MESSAGES
    ============================================================================ */
 
