--- a/templates/login.html
+++ b/templates/login.html
@@ -3,9 +3,9 @@
 {% block title %}Login - The Voyager{% endblock %}
 
 {% block content %}
-<div class="auth-container">
-    <h2>Login</h2>
+<h1 class="page-title">Login</h1>
 
+<div class="auth-container">
     <form method="post" action="{{ url_for('login') }}">
         {{ form.hidden_tag() }}
 
@@ -37,9 +37,9 @@
             {{ form.submit(class="btn btn-primary") }}
         </div>
     </form>
-
-    <p class="auth-link">
-        Don't have an account? <a href="{{ url_for('register') }}">Register here</a>.
-    </p>
 </div>
+
+<p class="auth-link">
+    Don't have an account? <a href="{{ url_for('register') }}">Register here</a>.
+</p>
 {% endblock %}
